--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -22,6 +22,7 @@ suites:
     run_list:
       - recipe[segulja_spacewalk::default]
       - recipe[segulja_bacula::director]
+      - recipe[segulja_bacula::database]
     verifier:
       inspec_tests:
         - test/smoke/default
