Changes:     - Change database to mariadb from postgresql     - Add mariadb packages to be installed     - Bumped version to 0.1.2
 On branch switch-to-centos
 Your branch is up to date with 'origin/switch-to-centos'.

 Changes to be committed:
	modified:   .kitchen.yml
	modified:   metadata.rb
	modified:   recipes/database.rb
	modified:   recipes/director.rb
	modified:   templates/bacula-dir.conf.erb

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,10 +13,9 @@ verifier:
   name: inspec
 
 platforms:
-  - name: bento/oracle-7.3
   - name: centos-7.4
     driver_config:
-      vm_hostname: bacula
+      vm_hostname: balrog
 
 suites:
   - name: director
